fix: only use JDK17 features
Signed-off-by: bzp99 <bpeter@edu.bme.hu>